DevTools: pick resource with certificate when retrieving cert data.

BUG=668072
NOTRY=true

Review-Url: https://codereview.chromium.org/2540493002
Cr-Commit-Position: refs/heads/master@{#434792}