third_party/WebKit/Source/core/inspector/InspectorNetworkAgent.cpp
@@ -1400,7 +1400,8 @@ Response InspectorNetworkAgent::getCertificate(
   for (auto& resource : m_resourcesData->resources()) {
     RefPtr<SecurityOrigin> resourceOrigin =
         SecurityOrigin::create(resource->requestedURL());
-    if (resourceOrigin->isSameSchemeHostPort(securityOrigin.get())) {
+    if (resourceOrigin->isSameSchemeHostPort(securityOrigin.get()) &&
+        resource->certificate().size()) {
       for (auto& cert : resource->certificate())
         certificate->get()->addItem(base64Encode(cert.latin1()));
       return Response::OK();
